Wrap post images in a tags. Fix issue where too many posts where loading on scroll on single post pages.

--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -350,6 +350,17 @@ header, main, footer {
 }
 }
 
+.single-post {
+
+  .card {
+
+    .card-image {
+      cursor: default;
+    }
+  }
+}
+
+
 // .isotope-item {
 //   width: 23%;
 //
